@@ -22,9 +22,9 @@ requires 'Error::Pure' => 0.15;
 requires 'GraphViz' => 0;
 requires 'PYX::Parser' => 0.02;
 requires 'perl' => '5.6.0';
-resources 'bugtracker' => 'https://github.com/tupinek/PYX-GraphViz/issues';
-resources 'homepage' => 'https://github.com/tupinek/PYX-GraphViz';
-resources 'repository' => 'git://github.com/tupinek/PYX-GraphViz';
+resources 'bugtracker' => 'https://github.com/michal-josef-spacek/PYX-GraphViz/issues';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/PYX-GraphViz';
+resources 'repository' => 'git://github.com/michal-josef-spacek/PYX-GraphViz';
 test_requires 'English' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
