@@ -118,7 +118,7 @@ SEE ALSO
         Install the PYX modules.
 
 REPOSITORY
-    <https://github.com/tupinek/PYX-GraphViz>
+    <https://github.com/michal-josef-spacek/PYX-GraphViz>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
